--- a/html_css/lab7-2_attempt2/css/style.css
+++ b/html_css/lab7-2_attempt2/css/style.css
@@ -9,73 +9,131 @@
     font-style: normal;
 
 }
+
+*{
+	margin: 0;
+	padding: 0;
+}
+
 .wrapper{
 	margin: 0 auto;
-	width: 320px;
+	min-width: 320px;
 }
+
 /*==========HEADER==========*/
-	.header{
-		background: url(../img/bg_head.jpg) top center no-repeat;
-		padding-top: 70px;
-	}
+.header{
+	background: url(../img/bg_head.jpg) top center no-repeat;
+	padding-top: 70px;
+}
 
-	.logo{
-		margin: 0 auto;
-		display: block;
-		width: 152px;
-		height: 39px;
-		background: url(../img/logo_header.png) 0 0 no-repeat;
-	}
+.logo{
+	margin: 0 auto;
+	display: block;
+	width: 152px;
+	height: 39px;
+	background: url(../img/logo_header.png) 0 0 no-repeat;
+}
 
-	.header-menu{
-		margin-top: 38px;
-		text-align: center;
-	}
+.header-menu{
+	margin-top: 38px;
+	text-align: center;
+}
 
-	.header-menu-dropdown__active:after{
-		content: "";
-		clear: both;
-		width: 100%;
-		height: 0;
-	}
-	.header-menu-dropdown__active-item{
-		float: left;
-		position: relative;
-		list-style: none;
-	}
-	.header-menu-dropdown__active-link{
-		display: block;
-	}
+.header-menu-dropdown__active{
+	padding-left: 0;
+}
 
-	.header-menu-dropdown__submenu{
-		display: none;
-		position: absolute;
-		top:100%;
-		left: 0;
-		width: 100%;
-	}
+.header-menu-dropdown__active-item{
+	position: relative;
+	margin: 0 auto;
+	padding: 13px 0 11px;
+	list-style: none;
+	width: 244px;
+	border: 1px solid rgba(0,0,0,0.0);
+}
 
-	.header-menu-dropdown__submenu-item{
-		list-style: none;
-	}
+.header-menu-dropdown__active:after{
+	content: "";
+	clear: both;
+	width: 100%;
+	height: 0;
+}
 
-	.header-menu-dropdown__active-item:hover.header-menu-dropdown__submenu{
-		display: block;
-	}
-	/*
-	.header-menu__active{
-		padding: 0 6px 8px;
-		color: #fff;
-		font-size: 24px;
-		font-family: 'League Gothic Regular', Arial, Tahoma, sans-serif;
-		text-transform: uppercase;
-		text-decoration: none;
-		border-bottom: 2px solid #edbfff;
-	}
+.header-menu-dropdown__active-link{
+	display: block;
+	box-sizing: border-box;
+	font-family: 'League Gothic Regular', Arial, Tahoma, sans-serif;
+	font-size: 24px;
+	color: #fff;
+	text-transform: uppercase;
+	text-decoration: none;
 
-	.header-menu__list{
-		display: none;
-	}*/
+}
+
+.header-menu-dropdown__active-link-span{
+	padding: 0 6px;
+	border-bottom: 2px solid #edbfff
+}
+
+.header-menu-dropdown__submenu{
+	display: none;
+	padding-left: 0;		
+	position: absolute;
+	top:100%;
+	left: 0;
+	width: 100%;
+}
+
+.header-menu-dropdown__submenu-item{
+	padding: 8px 1px 10px;
+	box-sizing: border-box;
+	list-style: none;
+	border: 1px solid #000;
+	border-top: 1px solid #523f5a;
+	border-bottom: 2px solid #36283e;
+	background-color: rgba(64, 51, 72, 0.7);
+}
+
+.header-menu-dropdown__active-item:hover{
+	border: 1px solid #000;
+	border-bottom: 2px solid #36283e;
+	-webkit-border-top-left-radius:15px;
+	-webkit-border-top-right-radius:15px;
+	-moz-border-radius-topleft:15px;
+	-moz-border-radius-topright:15px;
+	border-top-left-radius:15px;
+	border-top-right-radius:15px;
+	background-color: rgba(64, 51, 72, 0.7);
+}
+
+.header-menu-dropdown__active-item:hover .header-menu-dropdown__submenu{
+	display: block;
+}
+
+.header-menu-dropdown__submenu-link{
+	font-family: 'League Gothic Regular', Arial, Tahoma, sans-serif;
+	font-size: 24px;
+	color: #fff;
+	text-transform: uppercase;
+	text-decoration: none;
+}
+
+.header-menu-dropdown__submenu .header-menu-dropdown__submenu-item:last-child{
+	-webkit-border-bottom-right-radius:15px;
+	-webkit-border-bottom-left-radius:15px;
+	-moz-border-radius-bottomright:15px;
+	-moz-border-radius-bottomleft:15px;
+	border-bottom-right-radius:15px;
+	border-bottom-left-radius:15px;
+	border: 1px solid #000;
+}
+.header-menu-dropdown__submenu-item:hover{
+	background-color: rgba(47, 38, 52, 0.7);
+	border-bottom: 2px solid #edbfff;
+	transition: all 0.2s;
+}
+
+	
 /*==========SUB-HEADER==========*/
 
 /*==========CONTENT==========*/
