--- a/html_css/lab7-2_attempt2/css/style.css
+++ b/html_css/lab7-2_attempt2/css/style.css
@@ -17,7 +17,7 @@
 
 .wrapper{
 	margin: 0 auto;
-	min-width: 320px;
+	width: 320px;
 }
 
 /*==========HEADER==========*/
@@ -131,6 +131,10 @@
 	background-color: rgba(47, 38, 52, 0.7);
 	border-bottom: 2px solid #edbfff;
 	transition: all 0.2s;
+}
+
+.header-slider__text-content{
+	display: none;
 }
 
 	
