--- a/javascript/lab7-8/project_tabs/css/style.css
+++ b/javascript/lab7-8/project_tabs/css/style.css
@@ -8,10 +8,43 @@
 	margin: 50px auto;
 }
 
+.tabs-header__list{
+	display: table-row;
+}
+
 .tabs-header__item{
+	display: table-cell;
 	list-style: none;
+	background: #ccc;
+	height: 40px;
+	text-align: center;
+	border-left: 5px solid #fff;
+}
+
+.tabs-header__item:first-child{
+	border-left: none;
+	background: #f3f3f3;
 }
 
 .tabs-header__link{
+	display: table-cell;
+	width: 600px;
+	height: 40px;
+	line-height: 40px;
+	color:#000;
 	text-decoration: none;
+	font-size: 20px;
+}
+
+.tabs-header__link:hover{
+	color: #e8117f;
+}
+
+.tabs-content{
+	border: 10px solid #f3f3f3;
+}
+
+.tabs-content__item{
+	display: none;
+	padding: 10px;
 }
