--- a/html_css/lab7-2_attempt2/css/mediaqueries.css
+++ b/html_css/lab7-2_attempt2/css/mediaqueries.css
@@ -2,7 +2,7 @@
 	.wrapper{
 		max-width:480px; 
 	}
-
+/*==========HEADER 480px==========*/
 	.header{
 		padding-top: 64px;
 	}
@@ -48,8 +48,105 @@
 		padding-bottom: 60px;
 	}
 
+	.sub-header__box{
+		width: 99%
+	}
+
 	.sub-header__text{
-		width: 83%
+		width: 82%;
+	}
+
+	.content-posts__article{
+		width: 79%;
+		margin-left: 42px;
+	}
+
+	.content-updates{
+		margin: 0 0 0 47px;
+	}
+
+	.content-updates__more{
+		margin-right: 74px;
+	}
+
+	.logos{
+		border-bottom: 1px solid #fefefe;
+	}
+
+	.logos__box{
+		width: 33%;
+	}
+
+	.sub-content{
+		display: block;
+		padding-top: 80px;
+		border-top: 1px solid #d8d8d8;
+		background: #ececec;
+	}
+
+	.sub-content__article{
+		float: left;
+		width: 91%;
+		margin: 0 20px 57px;
+	}
+
+	.sub-content__header{
+		padding-bottom: 16px;
+		font-family: 'League Gothic Regular', Arial, Tahoma, sans-serif;
+		font-size: 24px;
+		text-transform: uppercase;
+		text-shadow: 1px 1px 0px rgba(255,255,255,0.9);
+	}
+
+	.sub-content__text{
+		height: 92px;
+		overflow: hidden;
+		font-family: 'OpenSans Light', Arial, Tahoma, sans-serif;
+		font-size: 16px;
+		color: #787878;
+		text-shadow: 1px 1px 0px rgba(255,255,255,0.9);
+	}
+
+	.sub-content__item{
+		overflow: hidden;
+	}
+
+	.footer-menu{
+		display: block;
+	}
+
+	.footer-menu__item{
+		min-width: 321px;
+		position: relative;
+		overflow: hidden;
+		padding: 0 4% 34px;
+	}
+
+	.footer-menu__list{
+		float: left;
+		list-style: none;
+		padding-right: 3%;
+		display: inline-block;
+	}
+	
+	.footer-menu__list:last-child{
+		padding-right: 0;
+	}
+
+	.footer-menu__link{
+		text-decoration: none;
+		font-family: 'League Gothic Regular', Arial, Tahoma, sans-serif;
+		font-size: 20px;
+		color: #fff;
+		text-shadow: 2px 2px 2px rgba(0,0,0,0.4);
+		text-transform: uppercase;
+		display: inline-block;
+
+	}
+
+	.footer{
+		padding-top: 44px;
+		padding-bottom: 80px;
 	}
 }
 
