--- a/html_css/lab7-2_attempt2/css/style.css
+++ b/html_css/lab7-2_attempt2/css/style.css
@@ -281,7 +281,7 @@
 }
 
 .content-posts__article{
-	width: 217px;
+	width: 68%;
 	background: #fff;
 	margin-left: 35px;
 	padding: 26px 35px 29px 0px;
@@ -350,6 +350,8 @@
 
 .content-updates{
 	overflow: hidden;
+	margin: 0 0 0 20px;
+	width: 89%;
 }
 
 .content-updates__header{
@@ -361,18 +363,21 @@
 
 .content-updates__title{
 	margin-bottom: 8px;
+	height: 23px;
+	overflow: hidden;
 	font-size: 16px;
 	font-family: 'OpenSans Extrabold', Arial, Tahoma, sans-serif;
 }
 
 .content-updates__info{
+	overflow: hidden;
+	height: 23px;
 	font-size: 16px;
 	font-family: 'OpenSans Light', Arial, Tahoma, sans-serif;
 }
 
 .content-updates__more{
 	float: right;
-	margin-right: 37px;
 	font-size: 18px;
 	font-family: 'League Gothic Regular', Arial, Tahoma, sans-serif;
 	text-transform: uppercase;
@@ -390,10 +395,14 @@
 	padding-bottom: 69px;
 }
 
+.logos__container{
+	margin: 0 20px;
+}
+
 .logos__box{
 	float: left;
 	margin-top: 45px;
-	width: 43%;
+	width: 50%;
 	height: 65px;
 	line-height: 65px;
  	text-align: center;
@@ -401,6 +410,12 @@
 
 .logos__img{
 	vertical-align: middle;
+}
+
+/*==========SUB-CONTENT==========*/
+
+.sub-content{
+	display: none;
 }
 
 /*==========FOOTER==========*/
@@ -412,10 +427,15 @@
 	text-align: center;
 }
 
+.footer-menu{
+	display: none;
+}
+
 .footer__copyright{
 	font-size: 12px;
 	font-family: 'OpenSans Light', Arial, Tahoma, sans-serif;
 	color: #fff;
+	text-shadow: 2px 2px 2px rgba(0,0,0,0.4);
 }
 
 .footer__copyright-company{
