--- a/html_css/lab7-2_attempt2/css/mediaqueries.css
+++ b/html_css/lab7-2_attempt2/css/mediaqueries.css
@@ -160,12 +160,12 @@
 	}
 }
 
-/*@media screen and (min-width: 481px) and (max-width: 768px) {
+@media(min-width: 768px) and (max-width: 959px) {
 	.wrapper{
-		max-width: 768px;
-	}*/
+		min-width: 768px;
+	}
 /*==========HEADER 768px==========*/
-	/*.logo{
+	.logo{
 		float: left;
 		margin-left: 20px;
 	}
@@ -253,10 +253,10 @@
 		margin-top: 119px;
 		padding-bottom: 60px;
 	}
-*/
+
 	/*==========SUB-HEADER 768px==========*/
 
-	/*.sub-header__box{
+	.sub-header__box{
 		width: 28%;
 		margin-right: 11px;
 	}
@@ -268,10 +268,10 @@
 	
 	.sub-header__link{
 		padding-right: 0px;
-	}*/
+	}
 
 	/*==========CONTENT 768px==========*/
-/*	.content{
+	.content{
 		padding-top: 98px;
 		padding-bottom: 70px;
 	}
@@ -284,26 +284,28 @@
 
 	.content-updates{
 		width: 44%;
-		float: right;
+		float: left;
 		margin-right: 20px;
+		margin-left: 48px;
 	}
 
 	.content{
 		overflow: hidden;
 	}
-*/
+
 	/*==========LOGOS 768px==========*/
 
-/*	.logos{
+	.logos{
 		border-bottom: 1px solid #fefefe;
 	}
 
 	.logos__box{
 		width: 15%;
+		margin-right: 1%;
 	}*/
 
 	/*==========SUB-CONTENT 768px==========*/	
-/*
+
 	.sub-content{
 		display: block;
 		padding-top: 80px;
@@ -336,11 +338,48 @@
 
 	.sub-content__item{
 		overflow: hidden;
-	}*/
+	}
+
+	/*==========SUB-CONTENT 480px==========*/	
+
+	.sub-content{
+		display: block;
+		padding-top: 80px;
+		padding-bottom: 92px;
+		border-top: 1px solid #d8d8d8;
+		background: #ececec;
+	}
+
+	.sub-content__article{
+		float: left;
+		width: 29%;
+		margin: 0 20px 20px;
+	}
+
+	.sub-content__header{
+		padding-bottom: 16px;
+		font-family: 'League Gothic Regular', Arial, Tahoma, sans-serif;
+		font-size: 24px;
+		text-transform: uppercase;
+		text-shadow: 1px 1px 0px rgba(255,255,255,0.9);
+	}
+
+	.sub-content__text{
+		height: 158px;
+		overflow: hidden;
+		font-family: 'OpenSans Light', Arial, Tahoma, sans-serif;
+		font-size: 16px;
+		color: #787878;
+		text-shadow: 1px 1px 0px rgba(255,255,255,0.9);
+	}
+
+	.sub-content__item{
+		overflow: hidden;
+	}
 
 	/*==========FOOTER 768px==========*/
 
-/*	.footer-menu{
+	.footer-menu{
 		display: block;
 	}
 
@@ -382,7 +421,7 @@
 		text-align: right;
 		padding-right: 20px;
 	}
-}*/
+}
 /*
 @media screen (min-width: 768px) and (max-width: 960px) {
 */
