--- a/html_css/lab7-2_attempt2/css/style.css
+++ b/html_css/lab7-2_attempt2/css/style.css
@@ -242,7 +242,7 @@
 /*==========SUB-HEADER==========*/
 
 .sub-header{
-	padding: 68px 0 65px;
+	padding: 71px 0 65px;
 	background: rgba(246,41,12,1);
 	background: -moz-linear-gradient(top, rgba(246,41,12,1) 0%, rgba(116,81,131,1) 0%, rgba(54,41,61,1) 100%);
 	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(246,41,12,1)), color-stop(0%, rgba(116,81,131,1)), color-stop(100%, rgba(54,41,61,1)));
@@ -262,8 +262,8 @@
 
 .sub-header__title{
 	background: url(../img/icon_sub-header.png) 0 0 no-repeat;
-	margin-left: 30px;
-	padding-left: 40px;
+	margin-left: 11px;
+	padding-left: 51px;
 	font-size: 24px;
 	font-family: 'League Gothic Regular', Arial, Tahoma, sans-serif;
 	color: #fff;
@@ -275,7 +275,7 @@
 	height: 67px;
 	width: 74%;
 	overflow: hidden;
-	margin-left: 70px;
+	margin-left: 62px;
 	font-size: 16px;
 	font-family: 'OpenSans Light', Arial, Tahoma, sans-serif;
 	color: #fff;
@@ -306,10 +306,11 @@
 }
 
 .content-posts__article{
-	width: 68%;
+	width: 93%;
 	background: #fff;
-	margin-left: 35px;
+	margin-left: 24px;
 	padding: 26px 35px 29px 0px;
+	height: 218px;
 }
 
 .content-posts__header{
