--- a/javascript/lab7-8/project_form/css/style.css
+++ b/javascript/lab7-8/project_form/css/style.css
@@ -2,21 +2,23 @@
     margin: 0;
     padding: 0;
 }
-
+.wrapper{
+	margin: 50px;
+}
 .fields{
     padding: 10px;
-}
-
-label {
     line-height: 25px;
 }
 
-input{
-    line-height:25px;
+label {
+	display: inline-block;
+    width: 80px;
+    margin-right: 20px;
 }
 
 fieldset{
-    height: 300px;
+    height: 150px;
+    width: 550px;
 }
 
 span{
