--- a/javascript/lab9-10/css/style.css
+++ b/javascript/lab9-10/css/style.css
@@ -120,3 +120,13 @@
     opacity: 1;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
 }
+
+/*SELECT*/
+.selector-title{
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.selector-items{
+    text-align: center;
+}
