--- a/javascript/lab11-12/css/style.css
+++ b/javascript/lab11-12/css/style.css
@@ -1,5 +1,8 @@
 /*carusel*/
-
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
     width: 100%;
     background: #D3D3D3;
@@ -60,4 +63,20 @@ body{
 
 .carousel-arrow-right {
     margin-left: 25px;
+}
+
+/*JavaScript Templating*/
+.shablon-wrapper{
+    width: 960px;
+    margin: 0 auto;
+    background: green;
+}
+
+hr{
+    height: 3px;
+    width: 70%;
+    color: grey;
+    background-color: grey;
+    border: none;
+
 }
