--- a/javascript/EXAM/src/sass/_mobile.scss
+++ b/javascript/EXAM/src/sass/_mobile.scss
@@ -64,4 +64,143 @@
 /*END HEADER*/
 
 /*BEGIN HOW*/
+.container {
+  padding: 34px 10px 0 10px;
+  text-align: center;
+}
+
+.how h2 {
+  margin-bottom: 4px;
+}
+
+.step {
+  margin: 10px auto 0 auto;
+  padding: 69px 19px 5px 19px;
+  border-radius: 5px;
+  text-align: left;
+
+  &__btn {
+    display: inline-block;
+    padding: 4px 8px;
+    background: $btn-bg;
+    border-radius: 20px;
+    font: 10px $MontserratRegular;
+    color: $color-1;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+
+    &:hover {
+      background: $btn-bg-hover;
+    }
+  }
+
+  &__title {
+    margin-top: 15px;
+    font: 24px $MontserratBold;
+    color: #fff;
+  }
+
+  &__text {
+    margin-top: 10px;
+    font: 14px/17px $Roboto;
+    color: #ccc;
+  }
+
+  &--bg1 {
+    width: 262px;
+    height: 166px;
+    background: #ccc url(../img/step-1.jpg) 0 0 no-repeat;
+  }
+
+  &--bg2-and-padding {
+    width: 262px;
+    height: 137px;
+    padding: 99px 19px 4px 19px;
+    background: #ccc url(../img/step-2.jpg) 0 0 no-repeat;
+  }
+
+  &--bg3 {
+    width: 262px;
+    height: 162px;
+    background: #ccc url(../img/step-3.jpg) 0 0 no-repeat;
+  }
+}
 /*END HOW*/
+
+/*BEGIN PARTNER*/
+.partner {
+  padding-top: 39px;
+}
+
+.partner {
+  width: 220px;
+  margin: 24px auto;
+  text-align: center;
+  
+  &__photo-wrap {
+    width: 125px;
+    margin: 0 auto;
+    position: relative;
+    
+    a {
+      display: block;
+    }
+
+    &--add-icon-1:after {
+      content: url("../img/icon-partner-1.png");
+      width: 41px;
+      height: 41px;
+      position: absolute;
+      right: -2px;
+      bottom: -2px;
+    }
+
+    &--add-icon-2:after {
+      @extend .partner__photo-wrap--add-icon-1;
+      content: url("../img/icon-partner-2.png");
+    }
+
+    &--add-icon-3:after {
+      @extend .partner__photo-wrap--add-icon-1;
+      content: url("../img/icon-partner-3.png");
+    }
+
+    &--add-icon-4:after {
+      @extend .partner__photo-wrap--add-icon-1;
+      content: url("../img/icon-partner-4.png");
+    }
+  }
+
+  &__name {
+    margin-top: 15px;
+    font: 14px $MontserratBold;
+    color: #333;
+  }
+
+  &__about {
+    margin-top: 11px;
+    font: 14px $Roboto;
+    color: #666;
+  }
+
+  &--margin {
+    margin-top: 12px;
+  }
+}
+
+.partner .btn-more-partners {
+  display: block;
+  width: 280px;
+  padding: 10px 0;
+  border: 2px solid #ff4e50;
+  border-radius: 20px;
+  margin: -4px auto;
+  font: 14px $MontserratBold;
+  color: #ff4e50;
+  &:hover {
+    border: 2px solid $btn-bg-hover;
+    background: $btn-bg-hover;
+    color: #fff;
+  }
+}
+/*END PARTNER*/
